Move figures again
Github didn't seem to like referring to parent folders.

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -21,13 +21,12 @@ knitr::opts_chunk$set(
   message = FALSE,
   warning = FALSE,
   error = FALSE,
-  fig.align = 'center',
-  fig.path = '../figs/'
+  fig.align = 'center'
 )
 
 # Utility functions
 script <- function(file) source(file.path("..", "scripts", file))
-fig <- function(file) file.path("..", "figs", file)
+fig <- function(file) file.path("index_files", "figure-html", file)
 fa <- function(icon) paste0('<i class="fa fa-', icon, '"></i>')
 
 # Check dependencies
