Set fixed date and add to Links section

--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,7 @@
 title: "Non-Standard Evaluation"
 subtitle: "and Metaprogramming in R"
 author: "<a href='https://github.com/janusvm'>Janus Valberg-Madsen</a>"
-date: "`r Sys.Date()` @ Aalborg R User Group"
+date: "2018-10-02 @ Aalborg R User Group"
 output:
   xaringan::moon_reader:
     css: [default, default-fonts, custom.css]
@@ -317,7 +317,9 @@ name: links
 
 `r emo::ji("closed_book")` [Advanced R](https://adv-r.hadley.nz) by Hadley Wickham (online book)
 
-`r fa("github")` [repository](https://github.com/AalborgRUG/talk-nse) for this presentation with source code and extra notes
+- in particular, the chapter on [Metaprogramming](https://adv-r.hadley.nz/meta.html)
+
+`r fa("github")` [repository](https://github.com/AalborgRUG/talk-nse) for this presentation with source code
 
 `r fa("github")` [AalborgRUG](https://github.com/AalborgRUG), a GitHub Organisation for this R User Group meant for sharing slides, notes, and code.
 Contact [Ege](mailto:rubak@math.aau.dk) to request membership
