--- a/input/metaprogramming.Rmd
+++ b/input/metaprogramming.Rmd
@@ -1,7 +1,30 @@
-name: metaprogramming
-class: center, middle, inverse
-background-image: url(./img/black-50.png), url(./img/code.jpg)
-background-size: cover
+class: center, middle
+layout: true
+
+---
+
+# What is non-standard evaluation?
+
+???
+Let's jump right into the central question for this talk: what is NSE?
+
+The quick answer is:
+
+> Functions are said to use NSE when they evaluate one or more of their arguments in a non-standard way.
+
+I don't suppose that really answers the question, though.  
+Given this answer, what then is standard evaluation?
+
+Another, slightly more informative way of putting it is that
+
+> NSE is what we call it when functions use _metaprogramming_
+
+I have titled this talk "Non-Standard Evaluation **and** Metaprogramming in R", but in truth, they aren't really seperate concepts.  
+NSE seems to be a term originating from R circles, but metaprogramming is a paradigm that's certainly not exclusive to R.
+
+So, [go to next slide]
+
+---
 
 # What is metaprogramming?
 
@@ -14,236 +37,46 @@ According to Wikipedia:
 > Metaprogramming is a programming technique in which computer programs have the ability to treat programs as their data. 
 > It means that a program can be designed to read, generate, analyse or transform other programs, and even modify itself while running.
 
-In R, this happens in many situations
+Metaprogramming traces its roots back to the 1940s, where philosopher and logician Willard van Orman Quine introduces the concept of _quasiquotation_ as a linguistic device in formal languages (more on quasiquotation later)
+
+The first programming language to support MP was Lisp in the 1970s.  
+Some of you likely knows some Lisp, especially if you use Emacs.  
+Lisp went **all in** on metaprogramming, making no distinction between code and data.
+
+The computer scientist Paul Graham wrote in his essay "Revenge of the Nerds":
+
+> _Lisp looks strange not so much because it has a strange syntax as because it has no syntax; you express programs directly in the parse trees that get built behind the scenes when other languages are parsed, and these trees are made of lists, which are Lisp data structures._
+
+This is not a talk on Lisp, but R does inherit many ideas from Lisp, such as _parse trees_ and _lexical scoping_ both of which we'll see in a few slides.
 
 ---
-
-```r
-x <- seq(0, 2 * pi, length.out = 100)
-plot(x, sin(x), type = "l")
-```
-
-???
-Here is an example in which an R function uses the _code_ given for its arguments in addition to their values
-
---
-
-```{r plot-labels, fig.height=4, fig.width=6, echo=FALSE}
-x <- seq(0, 2 * pi, length.out = 100)
-plot(x, sin(x), type = "l")
-```
-
-???
-Just a regular old plot using the base R `plot` function
-
---
-
-How does `plot` know how to label the axes?
-
-???
-- I didn't pass any label-related arguments
-- So where did these labels come from?
-- Answer: **from the function arguments themselves**
-
-
----
-layout: true
-name: substitute
-
-???
-Lets take a look under the hood of `plot.default`
-
-Tip: inspect source code of function with
-
-- `body(fun)`
-- `fun` in console (without parentheses)
-- In RStudio: place cursor in function name and press F2
-
-As we can see from the argument list, you can pass axis labels explicitly, but you seemingly don't have to
-
----
-template: substitute
-
-```console
-> plot.default
-```
-```{r, eval=FALSE}
-function (x, y = NULL, type = "p", xlim = NULL, ylim = NULL, 
-    log = "", main = NULL, sub = NULL, xlab = NULL, ylab = NULL, 
-    ann = par("ann"), axes = TRUE, frame.plot = axes, panel.first = NULL, 
-    panel.last = NULL, asp = NA, ...) 
-{
-    localAxis <- function(..., col, bg, pch, cex, lty, lwd) Axis(...)
-    localBox <- function(..., col, bg, pch, cex, lty, lwd) box(...)
-    localWindow <- function(..., col, bg, pch, cex, lty, lwd) plot.window(...)
-    localTitle <- function(..., col, bg, pch, cex, lty, lwd) title(...)
-    xlabel <- if (!missing(x)) 
-        deparse(substitute(x))
-    ylabel <- if (!missing(y)) 
-        deparse(substitute(y))
-    xy <- xy.coords(x, y, xlabel, ylabel, log)
-    # ...
-```
-
-
----
-count: false
-template: substitute
-
-```console
-> plot.default
-```
-```{r, eval=FALSE}
-function (x, y = NULL, type = "p", xlim = NULL, ylim = NULL, 
-    log = "", main = NULL, sub = NULL, xlab = NULL, ylab = NULL, 
-    ann = par("ann"), axes = TRUE, frame.plot = axes, panel.first = NULL, 
-    panel.last = NULL, asp = NA, ...) 
-{
-    localAxis <- function(..., col, bg, pch, cex, lty, lwd) Axis(...)
-    localBox <- function(..., col, bg, pch, cex, lty, lwd) box(...)
-    localWindow <- function(..., col, bg, pch, cex, lty, lwd) plot.window(...)
-    localTitle <- function(..., col, bg, pch, cex, lty, lwd) title(...)
-    xlabel <- if (!missing(x)) 
-        deparse(substitute(x))  #<<
-    ylabel <- if (!missing(y)) 
-        deparse(substitute(y))  #<<
-    xy <- xy.coords(x, y, xlabel, ylabel, log)
-    # ...
-```
-
-???
-These are the lines that produce the axis labels 
-
---
-
-- `deparse`: turns unevaluated expressions into strings
-
-???
-- As the name implies, it does the opposite of parsing: expr -> string
-
---
-
-- `substitute`: returns the *parse tree* for the expression
-
-???
-- Expression? But `x` and `y` are just numeric vectors, right?
-
----
-name: promises
+layout: false
+name: r-structure
 class: center, middle, inverse
-background-image: url(./img/black-25.png), url(./img/promise.jpg)
+background-image: url(./img/black-50.png), url(./img/code.jpg)
 background-size: cover
+
+# The structure of the R language
+
+???
+So let's dive into the meat of it all: how R works
+
+Before we can compute on the language, we have to understand the language we want to compute on.
+
+To quote Carl Sagan,
+
+> _If you wish to make apple pie from scratch, you must first invent the universe_
+
+So we ask ourselves: **how does R work?**
+
+---
+
+```{r lazyeval, child = "lazyeval.Rmd"}
+```
+
+---
 layout: false
 
-# Promises
-
-
-???
-- Wrong. `x` and `y` are _promises_
-- R is _lazy_
-  + It makes _promises_ to evaluate your function arguments
-  + but it won't _actually_ do it, until it is absolutely necessary
-- What _is_ a promise?
-- From the R language definition:
-  + Promise objects are part of R’s lazy evaluation mechanism
-  + They contain three slots: a value, an expression, and an environment 
-  + When a function is called the arguments are matched and then each of the formal arguments is bound to a promise
-  + The expression that was given for that formal argument and a pointer to the environment the function was called from are stored in the promise
-
----
-
-## Function arguments are lazy
-
-```{r}
-error_msg <- "Uh oh! You friccin moron. You just got BEANED!!!"
-
-f <- function(arg) {
-  print("Nothing to see here...")
-}
-
-f(stop(error_msg))
+```{r environments, child = "environments.Rmd"}
 ```
-
-???
-Here's an example of lazy evaluation in action:
-
-- The function `f` takes an argument `arg`, but doesn't use it for anything
-- Therefore, `arg` isn't ever evaluated, and we don't get an error
-
---
-
-```{r, error=TRUE}
-f <- function(arg) {
-  expr
-  print("Looks like we made it")
-}
-
-f(stop(error_msg))
-```
-
-???
-However, if the argument is used for _anything_, it forces evaluation, and we get an error
-
----
-
-```{r}
-e1 <- quote(y <- 2 * x)
-e2 <- quote(`<-`(y, `*`(2, x)))
-identical(e1, e2)
-```
-
---
-
-```{r, echo=FALSE, fig.align='center', out.width='50%'}
-knitr::include_graphics(fig("simple-ast.svg"))
-```
-
-???
-Here is a graphical representation of what's going on, called an _abstract syntax tree (AST)_.  
-The orange squares represent calls; first child is the function being called, subsequent children are arguments.
-
-
----
-
-```lisp
-(setq y (* 2 x))
-```
-
-
----
-
-## Everything is a function
-
-.pull-left[
-```{r}
-e1 <- quote(1)
-e2 <- quote(({1}))
-```
-]
-
-
----
-count: false
-
-## Everything is a function
-
-.pull-left[
-```{r}
-e1 <- quote(1)
-e2 <- quote(({1}))
-```
-
-```{r}
-identical(eval(e1), eval(e2))
-identical(e1, e2)
-```
-]
-
---
-
-.pull-right[
-```{r, echo=FALSE, out.width='75%'}
-knitr::include_graphics(fig("parens-ast.svg"))
-```
-]
 
